# rollups-examples

./: .gitmodules  deploy-testnet.yml
.github/workflows/: auction-dapp.yml  dapp-build.yml  solana-adapter.yml
ctsi_sol/: Cargo.toml
deployments/goerli/: echo-rust.address  solana-adapter.address
echo-rust/: Cargo.toml
echo-rust/src/: main.rs
frontend-console/src/commands/: inspect.ts
solana-adapter/: .dockerignore  .gitignore  4xRtyUw1QSVZSGi1BUb7nbYBk8TC9P1K1AE2xtxwaZmV.json  Cargo.toml  Dockerfile  EwiqbApgaLT2kQaohqZnSXT9HbkMQWDektXEjXGMJyJv.json  README.md  base-deploy.sh  build-prod.sh  build-with-docker-cartesi-prod.sh  dapp-deploy.sh  dapp-start-prod.sh  dapp-start.sh  dapp.json  deploy-cartesi-prod.sh  docker-compose.override.yml  entrypoint.sh  host-start.sh
solana-adapter/account_info_data/: 1111111111112RXi1yn6kTp7G8Td7o6z3Ciqw9v2.json  1111111111113nzYYNWbY9fQrS89ukXEjUyuZu1Z.json  4pFCaNNiKVHtYGFatR4LweHE7BuRvH7BqHo7MziPh7aE.json  4xRtyUw1QSVZSGi1BUb7nbYBk8TC9P1K1AE2xtxwaZmV.json  58tPH4GsdSn5ehKszkcWK12S2rTBcG9GaMfKtkEZDBKt.json  6Tw6Z6SsM3ypmGsB3vpSx8midhhyTvTwdPd7K413LyyY.json  8hHxSuh9zArMPaZuUgg4oUpG2og1TiB1Q1U9hvcBVWWT.json  9B5XszUGdMaxCZ7uSQhPzdks5ZQSmWxrmzCSvtJ6Ns6g.json  AxayTJjF7QJT1A6mEpVyNKfpdACbiWs8ghTWiwwWJkeE.json  CDYzkLyFZBomsqZtzAknRe4MxwohuPuTr14a1LpwbS5m.json  FZNTLWCboprKHNRH5spMA5DjbJmxnY7zBvrncw9SaHMz.json  GU12jkQ5c1Ddw7E1e18e1dYH2qs82M56LPfZqRhALCxd.json  JC3ddad1W9TRVeJ1WoLVTQ7CrwVemVUjsSzuvM9C9WJF.json
solana-adapter/base_spl/: Cargo.toml  build-prod.sh  deploy-cartesi-prod.sh
solana-adapter/base_spl/src/: lib.rs  main.rs
solana-adapter/ctsi_sol/: Cargo.toml
solana-adapter/ctsi_sol/src/: account_manager.rs  adapter.rs  anchor_lang.rs  anchor_spl.rs  lib.rs  mem_acc.rs  owner_manager.rs  transaction.rs  voucher.rs
solana-adapter/ctsi_sol/tests/: anchor_lang_test.rs  integration_test.rs  mem_acc_test.rs  owner_manager_test.rs  voucher_test.rs
solana-adapter/solana-smart-contract/: Cargo.toml  docker-bake.override.hcl  expanded.rs
solana-adapter/solana-smart-contract/src/: lib.rs  main.rs  models.rs
solana-adapter/solana_programs_riscv/: ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL  TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
solana-adapter/solana_smart_contract_bin/: 2QB8wEBJ8jjMQuZPvj3jaZP7JJb5j21u4xbxTnwsZRfv  7wFRuxMhXSj4AH4UGKSpaBWuYjxXkFLiakbKmE35W643  return_data.out
solana-adapter/src/: deposit.rs  inspect.rs  lib.rs  main.rs  token_account.rs  transaction.rs  voucher.rs
solana-adapter/stdio_call/: Cargo.toml  README.md
solana-adapter/stdio_call/data/: 1111111111112RXi1yn6kTp7G8Td7o6z3Ciqw9v2.json  58tPH4GsdSn5ehKszkcWK12S2rTBcG9GaMfKtkEZDBKt.json  6Tw6Z6SsM3ypmGsB3vpSx8midhhyTvTwdPd7K413LyyY.json  FZNTLWCboprKHNRH5spMA5DjbJmxnY7zBvrncw9SaHMz.json  TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA.json
solana-adapter/stdio_call/src/: lib.rs  main.rs
solana-adapter/stdio_call/tests/: stdio_call_tests.rs
solana-adapter/stdio_call/tests/fixtures/: create_account_in.txt  create_token_account_in.txt
solana-adapter/tests/: deposit_test.rs  inspect_test.rs  integration_test.rs  voucher_test.rs
solana-front/: .dccache  LICENSE.md  README.md  package.json
solana-front/frontend/: README.md  package.json  tsconfig.json
solana-front/frontend/src/: index.tsx
solana-front/frontend/src/components/: Greeter.tsx  ReadTokenAccount.tsx  WalletStatus.tsx  comps.tsx
solana-front/frontend/src/solana/: adapter.ts
solana-front/frontend/src/solana/graphql/: reports.ts
solana-front/frontend/src/solana/models/: solzen.json  solzen.ts
solana-front/test/: Factory.ts  SolanaAdapter.test.ts
solana-smart-contract/: Cargo.toml
solana-smart-contract/src/: lib.rs
