[package]
name = "solzen"
version = "0.3.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex.mikhalevich@cartesi.io>"]

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
anchor-lang = "^0.25.0"
anchor-spl = "^0.25.0"
hex = "0.4.3"
sha2 = "0.10.5"
spl-associated-token-account = "1.0.5"

[dev-dependencies]
# config do exemplo sysvar vindo do git@github.com:solana-labs/solana-program-library.git
# mas baixando para a versao compativel com o anchor
# a versao fica no projeto do anchor
# dentro do arquivo Cargo.toml tem uma linha com: solana-program = "~1.10.29"
solana-program-test = "1.10.29"
solana-sdk = "1.10.29"
solana-program = "~1.10.29"
