[package]
name = "solana_adapter"
version = "0.3.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex.mikhalevich@cartesi.io>"]

[dependencies]
# using anchor through ctsi_sol
# anchor-lang = "^0.25.0"
# anchor-lang = { path = "../../anchor/lang" }
# anchor-spl = "^0.25.0"

json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }

# downgrade from 1.18 to 1.14.1 cuz solana dependencies
tokio = { version = "1.14.1", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10.5"
spl-associated-token-account = "1.0.5"
base64 = "0.13.0"
bincode = "1.3.1"
# solana-perf = "1.10.29"
# solana-sdk = "1.10.29"
solana-program = "1.10.29"
spl-token = "3.3.1"
cartesi-solana = "0.1.0"
hex = "0.4.3"
generic-array = "0.14.6"
regex = "1.6.0"
serde = "1.0.144"
serde_json = "1.0.85"
url = "2.3.1"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
ethabi = "17.2.0"

[dev-dependencies]
# config do exemplo sysvar vindo do git@github.com:solana-labs/solana-program-library.git
# mas baixando para a versao compativel com o anchor
# a versao fica no projeto do anchor
# dentro do arquivo Cargo.toml tem uma linha com: solana-program = "~1.10.29"
# solana-program-test = "1.10.29"
