[package]
name = "base_spl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"

# include Cartesi lib
# ctsi_sol = { path = "../ctsi_sol" }
# cartesi-solana = "0.1.0"
cartesi-solana = { path = "../../../cartesi-solana" }

serde = "1.0.144"
