[package]
name = "ctsi_sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "^0.25.0"
anchor-spl = "^0.25.0"
base64 = "0.13.0"
bincode = "1.3.1"
ethabi = "17.2.0"
generic-array = "0.14.6"
hex = "0.4.3"
regex = "1.6.0"

# anchor-lang = { path = "../../../anchor/lang" }
# anchor-spl = { path = "../../../anchor/spl" }
spl-associated-token-account = "^1.0.5"
serde_json = "1.0.85"
serde = "1.0.144"
once_cell = "1.15.0"
