[package]
name = "stdio_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bincode = "1.3.1"
generic-array = "0.14.6"
hex = "0.4.3"
json = "0.12"
serde = "1.0.144"
serde_json = "1.0.85"

solana-program = "1.10.29"

ctsi_sol = { path = "../ctsi_sol" }
solana_smart_contract = { path = "../solana-smart-contract" }
